# check_status_socket

./: CMakeLists.txt
src/: check_socket.cpp  check_socket.hpp  exceptions.hpp  main.cpp
